src/assets/styles/pages/app-header.scss
.site-navbar {
  color: #000;
  border-bottom: 1px solid #F6F6F6;
  background-color: #F6F6F6;
  font-size: 24px;

  @include mobile {
    font-size: 18px;
  }

  h1 {
    font-size: 1.2em;
    font-weight: 900;
    line-height: 0.8em;
  }

  h2 {
    font-size: 1em;
    line-height: 1.1em;
    font-weight: 900;
    margin-top: -3px;
    text-align: right;
  }

  .container {
    justify-content: space-between;
    max-width: 760px;
    padding: 2rem 1rem;
    display: flex;

    @include mobile {
      font-size: 18px;
      padding: 1rem;
    }

    &.small-head {
      padding: 2rem 1rem;
      justify-content: center;

      @include mobile {
        padding: 0.6rem;
      }
    }
  }
}

.logo-text {
  display: inline-block;
  margin-right: 30px;

  span {
    display: inline-block;
  }

  .logo-text__beat {
    padding: 1px 5px 1px;
  }

  .logo-text__covid19 {
    padding: 1px 5px 4px;
    white-space: nowrap;
  }

  .logo-text__now {
    padding: 1px 5px 4px;
    background-color: #FF30E6;
    color: #fff;
  }
}

.logo-ticker {
  span {
    display: inline-block;
  }

  .logo-ticker__num {
    padding: 5px;
  }

  .logo-ticker__num strong {
    padding: 0 2px 1px;
    background-color: #FF30E6;
    color: #fff;
  }
}

